src/main/java/com/example/post/global/error/exception/PostException.java
package com.example.post.global.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class PostException extends RuntimeException {
    private final ErrorCode errorCode;
}
